--- a/css/brands.css
+++ b/css/brands.css
@@ -27,39 +27,52 @@
 
 */
 
-
 /* Buttons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-.button,
-button {
+.button {
   display: inline-block;
   text-decoration: none;
   height: 48px;
+  padding: 0 16px;
   text-align: center;
   vertical-align: middle;
   font-size: 18px;
   width: 300px;
-  font-weight: 700;
+  font-weight: 600;
   line-height: 48px;
-  letter-spacing: 0.1px;
-  white-space: wrap;
+  letter-spacing: 0.5px;
+  white-space: nowrap;
+  background-color: transparent;
   border-radius: 8px;
   cursor: pointer;
- }
-button:hover,
-.button:focus {
-  color: #333;
-  border-color: #888;
-  outline: 0; }
-.button.button-primary {
-  color: #FFF;
-  filter: brightness(90%) }
-.button.button-primary:hover,
-.button.button-primary:focus {
-  color: #FFF;
-  filter: brightness(90%) }
+  box-sizing: border-box; }
 
+/* Efecto de movimiento */
+.button:hover {
+  filter: brightness(50%);
+  transition: 0.4s;
+  padding-right: 24px;
+  padding-left:8px;
+}
+
+/* Efecto para description */
+.button:hover:before {
+  border: none;
+  color: white;
+  position: absolute;
+  padding: 0px 35px;
+  width: 400px;
+  height: auto;
+  word-spacing: 3px;
+  text-align: left;
+  text-decoration: none;
+  line-height: 1.3;
+  display: block;
+  font-size: 18px;
+  margin: 0px 280px;
+  cursor: pointer;
+  vertical-align: middle;
+}
 
 /* Brand Icons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -74,222 +87,74 @@ button:hover,
 
 /* Brand Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-/* Default (this is great for your own brand color!) */
-.button.button-default {
-  color: #FFFFFF;
-  background-color: #0085FF }
-.button.button-default:hover,
-.button.button-default:focus {
-  filter: brightness(90%) }
-
-/* Discord */
-.button.button-discord {
-  color: #FFFFFF;
-  background-color: #5865F2 }
-.button.button-discord:hover,
-.button.button-discord:focus {
-  filter: brightness(90%) }
-
-/* Facebook */
-.button.button-facebook {
-  color: #FFFFFF;
-  background-color: #1877f2 }
-.button.button-facebook:hover,
-.button.button-facebook:focus {
-  filter: brightness(90%) }
-
-/* Facebook Messenger */
-.button.button-messenger {
-  color: #FFFFFF;
-  background-image: linear-gradient(25deg,#0099FF, #5F5DFF,#A033FF, #C740CC, #FF5280, #FF7061) }
-.button.button-messenger:hover,
-.button.button-messenger:focus {
-  filter: brightness(90%) }
-
-/* Figma */
-.button.button-figma {
-  color: #FFFFFF;
-  background-color: #000000 }
-.button.button-figma:hover,
-.button.button-figma:focus {
-  filter: brightness(90%) }
-
 /* Github */
 .button.button-github {
   color: #FFFFFF;
   background-color: #000000 }
 .button.button-github:hover,
-.button.button-github:focus {
-  filter: brightness(90%) }
+.button.button-github:hover:before {
+  content: 'Aqui podras encontrar todo los repo que uso!';
+  white-space: initial; }
 
-/* Goodreads */
-.button.button-goodreads {
-  color: #333333;
-  background-color: #F3F1E6 }
-.button.button-goodreads:hover,
-.button.button-goodreads:focus {
-  filter: brightness(90%) }
-
-/* Instagram */
-.button.button-instagram {
-  color: #FFFFFF;
-  background-image: linear-gradient(-135deg,#1400c8,#b900b4,#f50000) }
-.button.button-instagram:hover,
-.button.button-instagram:focus {
-  filter: brightness(90%) }
-
-/* Kit */
-.button.button-kit {
-  color: #FFFFFF;
-  background-color: #000000 }
-.button.button-kit:hover,
-.button.button-kit:focus {
-  filter: brightness(90%) }
-
-/* LinkedIn */
+/* Linkedin */
 .button.button-linkedin {
   color: #FFFFFF;
-  background-color: #2867B2 }
+  background-color: #2867B2  }
 .button.button-linkedin:hover,
-.button.button-linkedin:focus {
-  filter: brightness(90%) }
+.button.button-linkedin:hover:before {
+    content: 'Esta es mi red social laboral, date una vuelta.';
+    white-space: initial; }
 
-/* Medium */
-.button.button-medium {
+/* Slides */
+.button.button-slides {
   color: #FFFFFF;
-  background-color: #000000 }
-.button.button-medium:hover,
-.button.button-medium:focus {
-  filter: brightness(90%) }
+  background-color: #212c3d }
+.button.button-slides:hover,
+.button.button-slides:hover:before {
+    content: 'Mis slides de cuando doy charlas en conferencias.';
+    white-space: initial; }
 
-/* Pinterest */
-.button.button-pinterest {
+/* Mercha */
+.button.button-mercha {
   color: #000000;
-  background-color: #FFE2EB }
-.button.button-pinterest:hover,
-.button.button-pinterest:focus {
-  filter: brightness(90%) }
-
-/* Producthunt */
-.button.button-producthunt {
-  color: #DA552F;
-  border-style: solid;
-  border-color: #DA552F;
-  border-width: 2px;
-  background-color: #FFFFFF }
-.button.button-producthunt:hover,
-.button.button-producthunt:focus {
-  filter: brightness(90%) }
+  background-color: #fffc00 }
+.button.button-mercha:hover,
+.button.button-mercha:hover:before {
+    content: 'Esta es mi tienda de merchandising, puedes encontrar remeras/camisetas/poleras y otro tipo de cosas :)';
+    white-space: initial; }
 
 /* Reddit */
 .button.button-reddit {
-  color: #000000;
-  background-color: #D7DFE2 }
-.button.button-reddit:hover,
-.button.button-reddit:focus {
-  filter: brightness(90%) }
-
-/* Skoob */
-.button.button-skoob {
   color: #FFFFFF;
-  background-color: #3189C8 }
-.button.button-skoob:hover,
-.button.button-skoob:focus {
-  filter: brightness(90%) }
+  background-color: #FF4500 }
+.button.button-reddit:hover,
+.button.button-reddit:hover:before {
+    content: 'Mi subreddit, como un pequeño foro para hacer preguntas sobre mis videos o cualquier tema relacionado con el contenido de mi canal.';
+    white-space: initial; }
 
-/* Snapchat */
-.button.button-snapchat {
+/* Mail */
+.button.button-mail {
   color: #000000;
-  background-color: #fffc00 }
-.button.button-snapchat:hover,
-.button.button-snapchat:focus {
-  filter: brightness(90%) }
+  background-color: #E8F3EC }
+.button.button-mail:hover,
+.button.button-mail:hover:before {
+    content: 'Haciendo click aquí, puedes enviarme un mail, puedo tardar en responder!';
+    white-space: initial; }
 
-/* SoundCloud */
-.button.button-soundcloud {
+/* Ko-Fi */
+.button.button-kofi {
   color: #FFFFFF;
   background-color: #ff5500 }
-.button.button-soundcloud:hover,
-.button.button-soundcloud:focus {
-  filter: brightness(90%) }
+.button.button-kofi:hover,
+.button.button-kofi:hover:before {
+    content: 'Si quieres, puedes comprarme un cafecito usando este link.';
+    white-space: initial; }
 
-/* Spotify */
-.button.button-spotify {
-  color: #FFFFFF;
-  background-color: #000000 }
-.button.button-spotify:hover,
-.button.button-spotify:focus {
-  filter: brightness(90%) }
-
-/* Steam */
-.button.button-steam {
-  color: #FFFFFF;
-  background-color: #171a21 }
-.button.button-steam:hover,
-.button.button-steam:focus {
-  filter: brightness(90%) }
-  
-/* Telegram */
-.button.button-telegram {
-  color: #FFFFFF;
-  background-color: #3faee8 }
-.button.button-telegram:hover,
-.button.button-telegram:focus {
-  filter: brightness(90%) }
-
-/* TikTok */
-.button.button-tiktok {
-  color: #FFFFFF;
-  background-color: #000000 }
-.button.button-tiktok:hover,
-.button.button-tiktok:focus {
-  filter: brightness(90%) }
-
-/* Tumblr */
-.button.button-tumblr {
-  color: #FFFFFF;
-  background-color: #131313 }
-.button.button-tumblr:hover,
-.button.button-tumblr:focus {
-  filter: brightness(90%) }
-
-/* Twitch */
-.button.button-twitch {
-  color: #FFFFFF;
-  background-color: #9146ff }
-.button.button-twitch:hover,
-.button.button-twitch:focus {
-  filter: brightness(90%) }
-
-/* Twitter */
-.button.button-twitter {
-  color: #FFFFFF;
-  background-color: #1DA1F2 }
-.button.button-twitter:hover,
-.button.button-twitter:focus {
-  filter: brightness(90%) }
-
-/* Vimeo */
-.button.button-vimeo {
-  color: #FFFFFF;
-  background-color: #1ab7ea }
-.button.button-vimeo:hover,
-.button.button-vimeo:focus {
-  filter: brightness(90%) }
-
-/* YouTube */
-.button.button-youtube {
-  color: #FFFFFF;
-  background-color:  #000000 }
-.button.button-youtube:hover,
-.button.button-youtube:focus {
-  filter: brightness(90%) }
-
-/* Wordpress */
-.button.button-wordpress {
-  color: #FFFFFF;
-  background-color: #21759b }
-.button.button-wordpress:hover,
-.button.button-wordpress:focus {
-  filter: brightness(90%) }
+/* Mercha */
+.button.button-sponsors {
+  color: #000000;
+  background-color: #fffc00 }
+.button.button-sponsors:hover,
+.button.button-sponsors:hover:before {
+    content: 'Si quieres trabajar conmigo, patrocinando algún video en mi canal, te recomiendo que leas esta página primero.';
+    white-space: initial; }
